# VeritasChain

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  ruff.toml  schema.sql
prompts/: initial_structure.md
scripts/: eas_schema_helper.py  register_eas_schema.py
src/: __init__.py  activities.py  api.py  bot.py  config.py  data_models.py  scoring.py  seed.py  worker.py  workflows.py
src/database/: __init__.py  connection.py  models.py
src/eas/: __init__.py  client.py
tests/: __init__.py  test_activities.py  test_api.py  test_bot.py  test_scoring.py  test_workflows.py
